--- a/sub.css
+++ b/sub.css
@@ -10,15 +10,27 @@
 .Servicerentalrules
 {
     font-size: 16px;
+    background-color: #1383b3;
+    padding: 0.5rem;
+    margin-top: 1rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
 }
 .servicerentalrules
 {
     left: 50px;
+    padding-left: 5rem;
 }
+
+
 .Documentsusedforrentingservices
 {
-    display: block;
     font-size: 16px;
+    background-color: #092430;
+    padding: 0.5rem;
+    margin-top: 1rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
 }
 .subdocumentsusedforrentingservices
 {
@@ -41,7 +53,7 @@
 
 .accordion {
     background-color: #eee;
-    color: #444;
+    color: #000000;
     cursor: pointer;
     padding: 20px;
     width: 90%;
@@ -50,7 +62,7 @@
     text-align: left;
     outline: none;
     margin: 5px;
-    font-size: 15px;
+    font-size: 20px;
     transition: 0.4s;
 }
 .active, .accordion:hover {
@@ -58,7 +70,7 @@
 }
 .accordion:after {
     content: '\002B';
-    color: #777;
+    color: #000000;
     font-weight: bold;
     float: right;
     margin-left: 5px;
@@ -68,7 +80,7 @@
 }
 .panel {
     padding: 0px 18px;
-    background-color: white;
+    background-color: rgb(244, 109, 109);
     max-height: 0;
     overflow: hidden;
     width: 85%;
@@ -85,34 +97,174 @@
 
 
 
-.card {
-  /* Add shadows to create the "card" effect */
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
+
+
+
+
+
+
+
+
+
+
+
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700');
+ul{
+  margin: 0;
+  padding: 0;
+}
+ul li{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.wrapper{
+  width: 840px;
+  margin: 0 auto;
+  height: 1200px;
+}
+.vehicle-card{
+  position: relative;
+  display: inline-block;
+  width: 240px;  
+  height: 335px;
+  overflow: visible;
+  z-index: 1;
+  border-radius: 2px;
+  margin: 0 20px 20px 0;
 }
 
-/* On mouse-over, add a deeper shadow */
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-/* Add some padding inside the card container */
-.container {
-  padding: 2px 16px;
-}
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  border-radius: 5px; /* 5px rounded corners */
-}
-/* Add rounded corners to the top left and the top right corner of the image */
-img {
-  border-radius: 5px 5px 0 0;
-  width: 5px;
-  height: 50px;
+.vehicle-card:hover {
+  z-index: 2;
+  -webkit-transform: translate(0px, -10px);
+  transform: translate(0, -10px);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  -webkit-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 
+.vehicle-card .details{
+  position: absolute;
+  height: 335px;
+  width: 240px;
+  overflow: hidden;
+  background-color: #fff;
+  box-shadow: 0 0px 5px rgba(0, 0, 0, 0.3);
+}
+
+.vehicle-card .details:hover{
+  -webkit-transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+  height: 395px;
+  width: 240px;
+}
+.vehicle-card .info{
+  margin: 10px;
+}
+.vehicle-card .ctas{
+  margin: 10px 0;
+}
+.thumb-gallery{
+  height: 150px;
+}
+.thumb-gallery img{
+  position: absolute; 
+  width: 240px;
+}
+.thumb-gallery img.first{
+  opacity: 1;
+}
+.vehicle-card:hover .thumb-gallery img.second{
+  opacity: 0;
+  -webkit-transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+/*styling*/
+.stars{
+  margin: 10px 0;
+}
+.star polygon {
+  fill: #E20000;
+}
+.vehicle-card h3{
+  margin: 0;
+  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
+  font-size: 1.5rem;
+  letter-spacing: -.5px;
+}
+.vehicle-card .price span{
+  font-family: "Helvetica", Arial, sans-serif;
+  color: #999;
+  font-size: .75rem;
+}
+.vehicle-card .price h4{
+  margin: 0;
+  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
+  color: #222;
+  font-size: 1.25rem;
+}
+.vehicle-card .desc p{
+  color: #666;
+  font-size: 1rem;
+  line-height: 1.25rem;
+}
+.vehicle-card .specs{
+  border-top: 1px solid #dadada;
+  border-bottom: 1px solid #dadada;
+  margin: 20px 0;
+  padding: 10px 0;  
+}
+.specs .spec{
+  display: inline-block;
+  margin-right: 10px;
+}
+.specs span{
+  font-family: "Helvetica", Arial, sans-serif;
+  color: #999;
+  font-size: .75rem;
+}
+.specs p{
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 1rem;
+  font-weight: bold;
+  margin: 0;
+}
+.specs p span{
+  font-size: .75rem;
+  margin-left: 2px;
+  font-weight: normal;
+}
+.btn{
+  display: block;
+  padding: 0 10px;
+  float: left;
+  font-size: .75rem;
+  font-family: "Helvetica", Arial, sans-serif;
+  text-decoration: none;
+  height: 30px;
+  width: 100px;
+  text-align: center;
+  border-radius: 2px;
+  font-weight: bold;  
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+}
+.primary{
+  background-color: #1383b3;
+  color: #fff;
+  margin-right: 10px;
+  line-height: 30px;
+}
+.secondary{
+  background-color: #fff;
+  color: #1383b3;
+  border: 2px solid #1383b3;  
+  line-height: 26px;
+}
 
 
 
@@ -121,3 +273,110 @@ img {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.scroller {
+  max-width: 600px;
+}
+
+.scroller__inner {
+  padding-block: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.scroller[data-animated="true"] {
+  overflow: hidden;
+  -webkit-mask: linear-gradient(
+    90deg,
+    transparent,
+    white 20%,
+    white 80%,
+    transparent
+  );
+  mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+}
+
+.scroller[data-animated="true"] .scroller__inner {
+  width: max-content;
+  flex-wrap: nowrap;
+  animation: scroll var(--_animation-duration, 40s)
+    var(--_animation-direction, forwards) linear infinite;
+}
+
+.scroller[data-direction="right"] {
+  --_animation-direction: reverse;
+}
+
+.scroller[data-direction="left"] {
+  --_animation-direction: forwards;
+}
+
+.scroller[data-speed="fast"] {
+  --_animation-duration: 20s;
+}
+
+.scroller[data-speed="slow"] {
+  --_animation-duration: 60s;
+}
+
+@keyframes scroll {
+  to {
+    transform: translate(calc(-50% - 0.5rem));
+  }
+}
+
+/* general styles */
+
+:root {
+  --clr-neutral-100: hsl(0, 0%, 100%);
+  --clr-primary-100: hsl(205, 15%, 58%);
+  --clr-primary-400: hsl(215, 25%, 27%);
+  --clr-primary-800: hsl(217, 33%, 17%);
+  --clr-primary-900: hsl(218, 33%, 9%);
+}
+
+html {
+  color-scheme: dark;
+}
+
+body {
+  display: grid;
+  min-block-size: 100vh;
+  place-content: center;
+  font-family: system-ui;
+  font-size: 1.125rem;
+  background-color: var(--clr-primary-800);
+}
+
+.tag-list {
+  margin: 0;
+  padding-inline: 0;
+  list-style: none;
+}
+
+.tag-list li {
+  padding: 1rem;
+  background: var(--clr-primary-400);
+  border-radius: 0.5rem;
+  box-shadow: 0 0.5rem 1rem -0.25rem var(--clr-primary-900);
+}
+
+/* for testing purposed to ensure the animation lined up correctly */
+.test {
+  background: red !important;
+}
