--- a/sub.css
+++ b/sub.css
@@ -10,7 +10,7 @@
 .Servicerentalrules
 {
     font-size: 16px;
-    background-color: #1383b3;
+    background-color: #9e9e9e;
     padding: 0.5rem;
     margin-top: 1rem;
     border-radius: 1rem;
@@ -26,7 +26,7 @@
 .Documentsusedforrentingservices
 {
     font-size: 16px;
-    background-color: #092430;
+    background-color: #b4b4b4;
     padding: 0.5rem;
     margin-top: 1rem;
     border-radius: 1rem;
@@ -51,8 +51,12 @@
 
 
 
+.Accordion
+{
+  color: #000000;
+}
 .accordion {
-    background-color: #eee;
+    background-color: #797979;
     color: #000000;
     cursor: pointer;
     padding: 20px;
@@ -108,167 +112,6 @@
 
 
 
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700');
-ul{
-  margin: 0;
-  padding: 0;
-}
-ul li{
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-.wrapper{
-  width: 840px;
-  margin: 0 auto;
-  height: 1200px;
-}
-.vehicle-card{
-  position: relative;
-  display: inline-block;
-  width: 240px;  
-  height: 335px;
-  overflow: visible;
-  z-index: 1;
-  border-radius: 2px;
-  margin: 0 20px 20px 0;
-}
-
-.vehicle-card:hover {
-  z-index: 2;
-  -webkit-transform: translate(0px, -10px);
-  transform: translate(0, -10px);
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-  -webkit-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-
-.vehicle-card .details{
-  position: absolute;
-  height: 335px;
-  width: 240px;
-  overflow: hidden;
-  background-color: #fff;
-  box-shadow: 0 0px 5px rgba(0, 0, 0, 0.3);
-}
-
-.vehicle-card .details:hover{
-  -webkit-transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-  height: 395px;
-  width: 240px;
-}
-.vehicle-card .info{
-  margin: 10px;
-}
-.vehicle-card .ctas{
-  margin: 10px 0;
-}
-.thumb-gallery{
-  height: 150px;
-}
-.thumb-gallery img{
-  position: absolute; 
-  width: 240px;
-}
-.thumb-gallery img.first{
-  opacity: 1;
-}
-.vehicle-card:hover .thumb-gallery img.second{
-  opacity: 0;
-  -webkit-transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-/*styling*/
-.stars{
-  margin: 10px 0;
-}
-.star polygon {
-  fill: #E20000;
-}
-.vehicle-card h3{
-  margin: 0;
-  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
-  font-size: 1.5rem;
-  letter-spacing: -.5px;
-}
-.vehicle-card .price span{
-  font-family: "Helvetica", Arial, sans-serif;
-  color: #999;
-  font-size: .75rem;
-}
-.vehicle-card .price h4{
-  margin: 0;
-  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
-  color: #222;
-  font-size: 1.25rem;
-}
-.vehicle-card .desc p{
-  color: #666;
-  font-size: 1rem;
-  line-height: 1.25rem;
-}
-.vehicle-card .specs{
-  border-top: 1px solid #dadada;
-  border-bottom: 1px solid #dadada;
-  margin: 20px 0;
-  padding: 10px 0;  
-}
-.specs .spec{
-  display: inline-block;
-  margin-right: 10px;
-}
-.specs span{
-  font-family: "Helvetica", Arial, sans-serif;
-  color: #999;
-  font-size: .75rem;
-}
-.specs p{
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 1rem;
-  font-weight: bold;
-  margin: 0;
-}
-.specs p span{
-  font-size: .75rem;
-  margin-left: 2px;
-  font-weight: normal;
-}
-.btn{
-  display: block;
-  padding: 0 10px;
-  float: left;
-  font-size: .75rem;
-  font-family: "Helvetica", Arial, sans-serif;
-  text-decoration: none;
-  height: 30px;
-  width: 100px;
-  text-align: center;
-  border-radius: 2px;
-  font-weight: bold;  
-  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-  box-sizing: border-box;         /* Opera/IE 8+ */
-}
-.primary{
-  background-color: #1383b3;
-  color: #fff;
-  margin-right: 10px;
-  line-height: 30px;
-}
-.secondary{
-  background-color: #fff;
-  color: #1383b3;
-  border: 2px solid #1383b3;  
-  line-height: 26px;
-}
-
-
-
-
 
 
 
@@ -289,7 +132,7 @@ ul li{
 
 
 .scroller {
-  max-width: 600px;
+  max-width: 1600px;
 }
 
 .scroller__inner {
@@ -330,10 +173,6 @@ ul li{
   --_animation-duration: 20s;
 }
 
-.scroller[data-speed="slow"] {
-  --_animation-duration: 60s;
-}
-
 @keyframes scroll {
   to {
     transform: translate(calc(-50% - 0.5rem));
@@ -343,10 +182,8 @@ ul li{
 /* general styles */
 
 :root {
-  --clr-neutral-100: hsl(0, 0%, 100%);
-  --clr-primary-100: hsl(205, 15%, 58%);
   --clr-primary-400: hsl(215, 25%, 27%);
-  --clr-primary-800: hsl(217, 33%, 17%);
+  --clr-primary-800: #F5F5F5;
   --clr-primary-900: hsl(218, 33%, 9%);
 }
 
@@ -376,7 +213,7 @@ body {
   box-shadow: 0 0.5rem 1rem -0.25rem var(--clr-primary-900);
 }
 
-/* for testing purposed to ensure the animation lined up correctly */
+/* for testing purposed to ensure the a
 .test {
   background: red !important;
 }
