--- a/home.css
+++ b/home.css
@@ -65,7 +65,7 @@ p{
 
 .btn{
     display: inline-block;
-    background: #ff523b;
+    background: #7EA1FF;
     color: #fff;
     padding:8px 30px;
     margin: 30px 0px;
@@ -76,7 +76,7 @@ p{
     background: #563434;
 }
 .header{
-    background: radial-gradient(#fff, #ffd6d6);
+    background: radial-gradient(#D1BB9E, #FFC470);
 }
 .header .row{
     margin-top: 70px;
@@ -92,7 +92,7 @@ p{
 }
 
 .col-3 img{
-   width: 100%;
+    width: 100%;
 }
 
 .small-container{
@@ -120,7 +120,7 @@ p{
 }
 .title::after{
     content: '';
-    background: #ff523b;
+    background: #ebe3e2;
     width: 80px;
     height: 5px;
     border-radius: 5px;
@@ -145,7 +145,7 @@ h4{
 
 /*-----------------------offer -----------------------*/
 .offer{
-    background: radial-gradient(#fff, #ffd6d6);
+    background: radial-gradient(#D1BB9E, #FFC470);
     margin-top: 80px;
     padding: 30px 0;
 }
@@ -646,11 +646,10 @@ a {
 @keyframes animateHeart {
     0% {
         transform: scale(1);
-    } 33% {
-        transform: scale(1.3);
-    } 66% {
-        transform: scale(0.7);
-    } 100% {
+    } 50% {
+        transform: scale(1.2);
+    }
+    100% {
         transform: scale(1);
     }
 }
@@ -777,3 +776,9 @@ a {
 .rentbtn:hover .text {
     color: #41B06E;
 }
+
+.menunavbar
+{
+    margin: 3rem;
+}
+
