--- a/home.css
+++ b/home.css
@@ -532,6 +532,23 @@ form a{
     transition: transform 1s;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*------------------- infinite card slide show ----------------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600;700&display=swap');
 * {
     box-sizing: border-box;
@@ -781,6 +798,21 @@ a {
 {
     margin: 3rem;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*------------------------------------------------------------*/
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
