--- a/account.css
+++ b/account.css
@@ -463,7 +463,7 @@ th:last-child{
 
 
 /*------------------------------ account-page ------------------------------*/
-/*.account-page{
+.account-page{
     padding: 50px 0;
     background: radial-gradient(#fff, #ffd6d6);
 }
@@ -536,4 +536,4 @@ form a{
     transform: translateX(100px);
     transition: transform 1s;
 
-}*/
+}
