--- a/account.css
+++ b/account.css
@@ -5,6 +5,7 @@
 }
 body{
     font-family: 'Poppins', sans-serif;
+    background-color: whitesmoke;
 }
 /*nav maenu on the left as a unordered list*/
 .navbar{
