--- a/style.css
+++ b/style.css
@@ -1,286 +1,92 @@
-body {
+@import url('https://fonts.gooogleapis.com/css2?familySpartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
+*{ 
     margin: 0;
-    background: #0e2953;
-    font-family: "Euclid Circular A", "Poppins";
-    color: #a0a8bd;
-    height: 100vh;
-  }
-  
-  :root {
-    --color-title: #fff9ff;
-  }
-  
-  footer {
-    position: fixed;
-    left: 0;
-    bottom: 12px;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Spartan',sans-serif;
+}
+
+h1{
+    font-size: 50px;
+    line-height: 64px;
+    color: #222;
+}
+
+h2{
+    font-size:46px;
+    line-height: 54px;
+    color: #222;
+}
+
+h4{
+    font-size:20px;
+    color: #222;
+}
+h6{
+    font-weight:700;
+    font-size:12px;
+}
+
+p{
+    font-size: 16px;
+    color: #465b52;
+    margin: 15px 0 20px 0;
+}
+
+.section-m1{
+    margin: 40px 0;
+}
+
+.section-p1{
+    margin: 40px 80px;
+}
+
+body{
     width: 100%;
-    background: #08162c;
-    padding-top: 60px;
-  }
-  
-  section.top > img {
-    height: 50px;
-    margin: 0 auto 50px;
-  }
-  
-  section {
-    position: relative;
-    margin: 0 30px;
-  }
-  
-  section.top {
-    display: grid;
-    border-bottom: 2px solid rgb(255 255 255 / 20%);
-    padding-bottom: 20px;
-  }
-  
-  section.bottom {
+}
+
+/*Header start*/
+#header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-direction: column-reverse;
-    gap: 8px;
-    padding: 20px 0;
-    text-align: center;
-  }
-  
-  section.top .links {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 30px;
-    margin-bottom: 36px;
-  }
-  
-  .links-column {
-    display: grid;
-    gap: 10px;
-    text-align: center;
-  }
-  
-  section h2 {
-    margin: 0 0 10px;
-    font-size: 18px;
-    font-weight: 400;
-    color: var(--color-title);
-  }
-  
-  section p {
-    margin: 0;
-  }
-  
-  .legal > a {
-    margin: 0 0 0 15rem;
-  }
-  
-  .legal,
-  .copyright {
-    font-size: 12px;
-  }
-  
-  .legal > span {
-    margin-right: 10px;
-  }
-  
-  section.top .socials {
-    position: absolute;
-    left: 50%;
-    bottom: 10px;
-    translate: -50% 0;
+    padding: 20px 80px;
+    background: #E3E6F3;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+#navbar{
     display: flex;
     align-items: center;
-    gap: 12px;
-    height: 56px;
-  }
-  
-  section.top .socials > a {
-    font-size: 20px;
-    background: rgb(45 118 232 / 25%);
-    color: var(--color-title);
-    width: 36px;
-    height: 36px;
-    display: grid;
-    place-items: center;
-    border-radius: 50%;
-  }
-  
-  .socials-column :is(h2, p) {
-    display: none;
-  }
-  
-  @media (width > 400px) {
-    .links-column {
-      text-align: left;
-    }
-  
-    section.top .links {
-      grid-template-columns: repeat(2, 1fr);
-      margin-right: 50px;
-    }
-  
-    section.bottom {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-direction: row;
-      gap: 20px;
-      text-align: left;
-    }
-  
-    section.top .socials {
-      left: 0;
-      translate: 0;
-    }
-  
-    section.top > img {
-      margin: 0 0 50px;
-    }
-  }
-  
-  @media (width >= 640px) {
-    section {
-      margin: 0 auto;
-      max-width: 580px;
-      padding: 0;
-    }
-  
-    section.top .links {
-      grid-template-columns: repeat(3, 1fr);
-    }
-  
-    section.top .socials {
-      position: static;
-    }
-  
-    section.bottom {
-      justify-content: flex-start;
-    }
-  
-    .socials-column :is(h2, p) {
-      display: block;
-    }
-    
-  }
-  @media (width <= 580px) {
-    .menu-right img:nth-child(n + 3) {
-      display: none;
-    }
-  
-    .menu-items {
-      display: none;
-      width: 100%;
-      flex-direction: column;
-      gap: 16px;
-      position: absolute;
-      top: 60px;
-      left: 0;
-      padding: 0 20px 20px;
-      background: #161b22;
-    }
-  
-    .menu-left {
-      flex-direction: column;
-      gap: 12px;
-    }
-  
-    .menu-left a {
-      border-bottom: 1px solid #30363d;
-      padding-bottom: 10px;
-    }
-  
-    .menu-right {
-      margin-left: 0;
-    }
-  
-    .burger {
-      display: block;
-    }
-  }
+    justify-content: center;
 
+}
 
-
-
-
-
-
-
-  nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
-    height: 60px;
+#navbar li{
     padding: 0 20px;
-    background: #161b22;
-  }
-  
-  nav img {
-    width: 30px;
-    height: 30px;
-  }
-  
-  .burger {
-    display: none;
-    cursor: pointer;
-  }
-  
-  .menu-items,
-  .menu {
-    display: flex;
-    gap: 16px;
-  }
-  
-  .menu-right {
+    list-style: none;
     position: relative;
-    margin-left: auto;
-    gap: 6px;
-  }
-  
-  .menu-right img {
-    width: 30px;
-    height: 30px;
-    padding: 5px;
-  }
-  
-  .menu-right .badge {
+}
+
+#navbar li{
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    color: #1a1a1a;
+    transition: 0.3s ease;
+}
+
+#navbar li a:hover,
+#navbar li a.active{
+    color: #4d4;
+}
+
+#navbar li a.active::after{
+    content: "";
+    width: 30%;
+    height: 2px;
+    background: #4d4;
     position: absolute;
-    top: 0;
-    left: 14px;
-    width: 14px;
-    height: 14px;
-    border-radius: 50%;
-    border: 2px solid #161b22;
-    background: linear-gradient(#54a3ff, #006eed);
-  }
-  a,
-a:is(:visited, :active) {
-  color: #ffffff;
-  text-decoration: none;
-  line-height: 24px;
-}
-
-.search {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: #0d1117;
-  border: 1px solid #30363d;
-  border-radius: 6px;
-  padding-right: 4px;
-}
-
-.search input {
-  padding: 4px 10px;
-  color: #c9d1d9;
-  font-size: 13px;
-  font-family: inherit;
-  border: 0;
-  background: transparent;
-}
-
-.search button {
-  border: inherit;
-  border-radius: inherit;
-  background: transparent;
-  color: #8b949e;
+    bottom: -4px;
+    left: 20px;
 }
