--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ a{
 
 p{
     font-size: 16px;
-    color: #465b52;
+    color: rgb(202, 201, 201);
     margin: 15px 0 20px 0;
 }
 
@@ -57,6 +57,10 @@ body{
     padding: 20px 80px;
     background: #E3E6F3;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    left: 0;
 }
 
 #navbar{
@@ -98,7 +102,7 @@ body{
 
 /*Home page*/
 #hero{
-    background-image: url("https://i.pinimg.com/564x/7f/ed/cd/7fedcdb48a2a7bca475c3576ca7c337d.jpg");
+    background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/fs/b1eca884922555.5d86dca91ce67.jpg");
     height: 90vh;
     width: 100%;
     background-size: cover;
@@ -112,6 +116,8 @@ body{
 
 #hero h4{
     padding-bottom: 15px;
+    color: rgb(202, 201, 201);
+
 }
 
 #hero h2{
